# TrueGraphDataBase

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  TrueGraphDB.sln  TrueGraphDB.vcxproj  TrueGraphDB.vcxproj.filters  build.bat  db.cpp  db.h  example.cpp  example_db.tgdb  main.cpp  node.cpp  node.h  search.cpp  tgdbTypes.h
include/: db.h  node.h  tgdb.h  tgdb_types.h
src/: db.cpp  node.cpp  tgdb.cpp  tgdb_dealloc_seq.cpp  tgdb_out.cpp  tgdb_ref.cpp  tgdb_search.cpp  tgdb_string.cpp
